SUBDIRS = encoding ndc rolling
EXTRA_DIST = LevelMatchFilter* \
             LevelRangeFilter* \
             NDCMatchFilter* \
             custom* \
             dom.* \
             hierarchyThreshold.* \
             l7d.* \
             patternLayout.* \
             socketServer.* \
             xmlLayout.* \
             fallback \
             simple \
             ttcc
